Reponsive lai giao dien login, task details, Dashboard

--- a/TaskManager.Web/Views/Account/Login.cshtml
+++ b/TaskManager.Web/Views/Account/Login.cshtml
@@ -47,7 +47,9 @@
         </div>
     </div>
 </div>
-
+@section Styles {
+    <link rel="stylesheet" href="~/css/login.responsive.css" asp-append-version="true" />
+}
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
